crates/oxc_css_parser/tests/error/scss/at-rule/include/missing-using.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `(`
  ┌─ missing-using.scss:1:18
  │
1 │ @include mixin() () {}
  │                  ^


